fix for second image in man-image on small devices

--- a/styles/media.less
+++ b/styles/media.less
@@ -181,8 +181,8 @@ html {
           position: relative;
           top: 1rem;
           margin-right: 8rem;
-          width: calc(@width-arrow / 1.2);
-          height: calc(@height-arrow / 1.2);
+          width: calc(@width-arrow / 1.3);
+          height: calc(@height-arrow / 1.3);
         }
       }
     }
